custom-elements: document.createElementNS() should check namespace URIs.

Custom Element V1 supports only XHTML namespace, and
Document::createElemenNS() ignored specified namespace URI.
 - Reject namespace URIs other than XHTML's one on finding 'definition'.
 - Check existence of 'definition' instead of names on choosing
   appropriate element factory.

The new behavior matches to Firefox and the specification.

Bug: 806665
Change-Id: I458685eeb48019be9da086b3b2a8703deac655c6
Reviewed-on: https://chromium-review.googlesource.com/892541
Reviewed-by: Yoshifumi Inoue <yosin@chromium.org>
Commit-Queue: Kent Tamura <tkent@chromium.org>
Cr-Commit-Position: refs/heads/master@{#532782}
Former-commit-id: 968b4a0fd847a365d51a80c502791674b974d06a